[tool.poetry]
name = "loupepy"
version = "0.1.0"
description = "Convert Python AnnData objects to 10x Genomics Loupe files."
authors = ["Bill Flynn <wflynny@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
anndata = "^0.10.7"
h5py = "^3.11.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
